--- a/Info.plist
+++ b/Info.plist
@@ -13,9 +13,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2016.2.24.0</string>
+	<string>2016.2.24.1</string>
 	<key>CFBundleVersion</key>
-	<string>2016.2.24.0</string>
+	<string>2016.2.24.1</string>
 	<key>Chrome</key>
 	<dict/>
 	<key>Content</key>
@@ -35,7 +35,7 @@
 	<key>Description</key>
 	<string>Translate from Japanese to Chinese</string>
 	<key>DeveloperIdentifier</key>
-	<string>2016.2.24.0</string>
+	<string>tw.idv.mht</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
