--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,14 @@
 {
   "manifest_version": 2,
   "name": "DQMSL Search Translation",
-  "version": "2016.2.24.0",
+  "version": "2016.2.24.1",
   "description": "Translate names in DQMSL Search (http://dqmsl-search.net) to Chinese",
   "content_scripts": [
     {
-      "matches": ["http://dqmsl-search.net/*"],
+      "matches": [
+        "http://dqmsl-search.net/*",
+        "http://dqmsl.jpn.org/*"
+      ],
       "js": ["jquery-2.2.0.min.js","dqmsl.min.js"]
     }
   ]
