--- a/Info.plist
+++ b/Info.plist
@@ -33,9 +33,9 @@
 		</dict>
 	</dict>
 	<key>Description</key>
-	<string>Translate from Japanese to Chinese</string>
+	<string>Translate names in DQMSL Search (http://dqmsl-search.net) to Chinese</string>
 	<key>DeveloperIdentifier</key>
-	<string>tw.idv.mht</string>
+	<string>0000000000</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
