--- a/Info.plist
+++ b/Info.plist
@@ -52,6 +52,6 @@
 		</dict>
 	</dict>
 	<key>Website</key>
-	<string>http://dqmsl-search.net</string>
+	<string>https://github.com/mht208/dqmsl-search-translation</string>
 </dict>
 </plist>
