--- a/Info.plist
+++ b/Info.plist
@@ -5,7 +5,7 @@
 	<key>Author</key>
 	<string>Ming-Hsien Tsai</string>
 	<key>Builder Version</key>
-	<string>14606.4.5</string>
+	<string>12019.4.25.0.4</string>
 	<key>CFBundleDisplayName</key>
 	<string>DQMSL Search Translation</string>
 	<key>CFBundleIdentifier</key>
@@ -13,9 +13,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2019.2.19.0</string>
+	<string>2019.4.25.0</string>
 	<key>CFBundleVersion</key>
-	<string>2019.2.19.0</string>
+	<string>2019.4.25.0</string>
 	<key>Chrome</key>
 	<dict/>
 	<key>Content</key>
@@ -47,7 +47,10 @@
 				<string>dqmsl-search.net</string>
 				<string>dqmsl.jpn.org</string>
 				<string>dqmsl.gamedbs.jp</string>
+				<string>ドラゴンクエストモンスターズ.gamewith.jp</string>
 			</array>
+			<key>Include Secure Pages</key>
+			<true/>
 			<key>Level</key>
 			<string>Some</string>
 		</dict>
