--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
   "manifest_version": 2,
   "name": "DQMSL Search Translation",
-  "version": "2020.3.10.1",
+  "version": "2020.3.23.0",
   "description": "Translate names in DQMSL Search (http://dqmsl-search.net) to Chinese",
   "author": "Ming-Hsien Tsai",
   "homepage_url": "https://github.com/mht208/dqmsl-search-translation",
+  "icons": { "128": "icon.png" },
   "content_scripts": [
     {
       "matches": [
